welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:25: error: not found: value Yellow
    faireV(Yellow)
           ^MethodsPicture:30: error: not found: value faireV
faireV(Yellow) 
^MethodsPicture:30: error: not found: value Yellow
faireV(Yellow) 
       ^