welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  
  def paint() {
    baisseBrosse()
    leveBrosse()
  }
  
  def faireV(col:Color) {
    setCouleurBrosse(col)
    avance()
    paint()
    avance()
    droite()
    avance()
    paint()
    recule()
    gauche()
    avance()
    paint()
    avance()
    droite()    
  }
  
  def faireM() {
    faireV(Yellow)
  }
  
}

faireV(Yellow)